Update fonts and colors

--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -2,15 +2,15 @@
  * Customization Variables
  */
 
-$accent_lightmode: #BF616A;
-$base_lightmode: #2D2D2D;
+$accent_lightmode: #0D75E6;
+$base_lightmode: #2B2F32;
 $bg_lightmode: #FFFFFF;
 
-$accent_darkmode: #D8B4F9;
-$base_darkmode: #EBEBEB;
-$bg_darkmode: #242424;
+$accent_darkmode: #B5D5FF;
+$base_darkmode: #E6EAF0;
+$bg_darkmode: #2B2F32;
 
-$font_family: "Helvetica";
+$font_family: "Roboto";
 $header_font_size: 35px;
 $body_font_size: 18px;
 
