--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -10,7 +10,7 @@ $accent_darkmode: #B5D5FF;
 $base_darkmode: #E6EAF0;
 $bg_darkmode: #2B2F32;
 
-$font_family: "Roboto";
+$font_family: "Helvetica";
 $header_font_size: 35px;
 $body_font_size: 18px;
 
