--- a/_sass/vars.scss
+++ b/_sass/vars.scss
@@ -2,7 +2,7 @@
  * Customization Variables
  */
 
-$accent_lightmode: #0D75E6;
+$accent_lightmode: #479AF5;
 $base_lightmode: #2B2F32;
 $bg_lightmode: #FFFFFF;
 
